tests/type_errors/tuple_fn_eq_error.nos
# expect_error: does not implement Eq
# Tuples containing functions cannot be compared with ==
main() = {
    a = (1, x => x + 1)
    b = (2, x => x + 2)
    a == b
}
